fix: 🐛 session list headline alignement

--- a/src/components/sessionsList/sessionsList.styles.scss
+++ b/src/components/sessionsList/sessionsList.styles.scss
@@ -230,12 +230,10 @@ $headerHeight: 80px;
 	font-size: $font-size-h3;
 	font-weight: $font-weight-medium;
 	line-height: $line-height-tertiary;
-	text-align: center;
 	margin-bottom: 0;
 	margin-right: $grid-base-seven;
 
 	@include breakpoint($fromLarge) {
-		text-align: left;
 		margin-left: 0;
 	}
 }
